2000-10-05  Michael Meeks  <michael@helixcode.com>

	* toolbar.c (toolbar_setup): upd.

	* menubar.c (menubar_setup): upd.

2000-10-04  Michael Meeks  <michael@helixcode.com>

	* menubar.c (menubar_setup): simplify with new helper.

2000-09-21  Michael Meeks  <michael@helixcode.com>

	* editor-control-factory.c (set_frame_cb): upd.

2000-09-28  Larry Ewing  <lewing@helixcode.com>

	* Makefile.am: fix broken referencing of html-editor-control.xml

2000-09-26  Radek Doulik  <rodo@helixcode.com>

	* menubar.c (menubar_setup): use BonoboUINode instead of xmlNode,
	because of Bonobo changes

	* editor-control-factory.c: add ref counting, unfortunately
	control isn't destroyed right way and we don't get destroy signal
	from it

2000-09-24  Larry Ewing  <lewing@helixcode.com>

	* editor-control-factory.c (load_from_corba): 
	(set_frame_cb): change prototype to Bonobo_Unknown so that things
	build with the latest bonobo.

2000-09-16  Michael Meeks  <michael@helixcode.com>

	* Makefile.am (-DGNOMEDATADIR): add.

	* menubar.c (menubar_setup): use it.

2000-09-14  Radek Doulik  <rodo@helixcode.com>

	* menubar.c (properties_cb): run editor capplet

2000-09-07  Michael Meeks  <michael@helixcode.com>

	* Makefile.am: add .xml install

	* menubar.c: Update for new UI code.

	* test-html-editor-control.c: Update for new UI code

2000-09-08  Radek Doulik  <rodo@helixcode.com>

	* toolbar.c (setup_font_size_option_menu): hide +5 size

2000-08-18  Larry Ewing  <lewing@helixcode.com>

	* toolbar.c (paragraph_style_menu_item_activated_cb): remove
	warning that printed out the value of the new style.

2000-08-14  Radek Doulik  <rodo@helixcode.com>

	* editor-control-factory.c (html_button_pressed): use
	Ctrl-Button1-2xclick for object properties

2000-08-13  Ettore Perazzoli  <ettore@helixcode.com>

	* spell.c (select_row): Don't segfault on a NULL event, as stupid
	GtkClist does synthesize that.

2000-08-10  Radek Doulik  <rodo@helixcode.com>
