@@ -1,3 +1,13 @@
+2000-10-05  Larry Ewing  <lewing@helixcode.com>
+
+	* test-html-editor-control.c (container_create): attach the
+	resolver to the control frame now that the component expects it
+	there.
+
+	* editor-control-factory.c (load_from_corba): fix the extreme
+	brokeness involing the uih.  Now we try to resolve the interface
+	through the control frame.
+
 2000-10-05  Michael Meeks  <michael@helixcode.com>
 
 	* toolbar.c (toolbar_setup): upd.
